// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Node.js snippet generation express request should match fixture for "empty" 1`] = `Object {}`;

exports[`Node.js snippet generation express request should match fixture for "empty-default" 1`] = `
Object {
  "security": Object {
    "petstore_auth": Object {
      "line": 29,
    },
  },
  "server": Object {
    "name": Object {
      "line": 26,
    },
  },
}
`;

exports[`Node.js snippet generation express request should match fixture for "security-and-server-variables" 1`] = `
Object {
  "security": Object {
    "basic_auth": Object {
      "line": 31,
    },
    "petstore_auth": Object {
      "line": 30,
    },
  },
  "server": Object {
    "name": Object {
      "line": 26,
    },
    "port": Object {
      "line": 27,
    },
  },
}
`;

exports[`Node.js snippet generation express request should match fixture for "security-variables" 1`] = `
Object {
  "security": Object {
    "basic_auth": Object {
      "line": 27,
    },
    "petstore_auth": Object {
      "line": 26,
    },
  },
}
`;

exports[`Node.js snippet generation express request should match fixture for "server-variables" 1`] = `
Object {
  "server": Object {
    "name": Object {
      "line": 26,
    },
    "port": Object {
      "line": 27,
    },
  },
}
`;
